--- a/FileExplorer/View/CustomMenuView.xaml
+++ b/FileExplorer/View/CustomMenuView.xaml
@@ -2,14 +2,14 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"             
              xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
              xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
              xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
              xmlns:common="clr-namespace:FileExplorer.Core"             
              xmlns:editors="clr-namespace:FileExplorer.Editors"
              xmlns:controls="clr-namespace:FileExplorer.Controls"
-             Padding="10,0" MinWidth="800" MinHeight="200">
+             Padding="10,0" MinWidth="960" MinHeight="480">
 
     <UserControl.Resources>
         <Style x:Key="RadioListBoxStyle" TargetType="dxe:ListBoxEdit">
@@ -30,15 +30,22 @@
 
     <dxg:GridControl ItemsSource="{Binding}">
         <dxg:GridControl.Resources>
+            <Style TargetType="dxlc:LayoutItem">
+                <Setter Property="ElementSpace" Value="10" />
+                <Setter Property="Margin" Value="10,5,0,0" />
+            </Style>
+            <Style TargetType="dxlc:GroupBox">
+                <Setter Property="TitleVisibility" Value="Collapsed" />
+            </Style>
             <DataTemplate x:Key="CommandEditorTemplate">
-                <dxe:ComboBoxEdit x:Name="PART_Editor">
+                <dxe:ComboBoxEdit x:Name="PART_Editor" IsTextEditable="False">
                     <dxmvvm:Interaction.Behaviors>
                         <dxmvvm:EnumItemsSourceBehavior EnumType="{x:Type common:CommandType}" />
                     </dxmvvm:Interaction.Behaviors>
                 </dxe:ComboBoxEdit>
             </DataTemplate>
             <DataTemplate x:Key="ParameterEditorTemplate">
-                <dxe:ComboBoxEdit x:Name="PART_Editor">
+                <dxe:ComboBoxEdit x:Name="PART_Editor" IsTextEditable="False">
                     <dxmvvm:Interaction.Behaviors>
                         <dxmvvm:EnumItemsSourceBehavior EnumType="{x:Type common:ParameterType}" />
                     </dxmvvm:Interaction.Behaviors>
@@ -49,70 +56,110 @@
         <dxg:GridControl.View>
             <dxg:TableView AutoWidth="True" AllowColumnFiltering="False" AllowColumnMoving="False" AllowSorting="False" 
                            IsColumnMenuEnabled="False" ShowGroupPanel="False" VerticalScrollbarVisibility="Auto" NavigationStyle="Row"
-                           EditFormShowMode="Inline" EditFormPostConfirmation="YesNoCancel" EditFormPostMode="Immediate" NewItemRowPosition="Bottom" ValidateRow="{DXEvent 'Update(@args.Row)'}" />
+                           EditFormShowMode="Inline" EditFormPostConfirmation="YesNoCancel" EditFormPostMode="Immediate" NewItemRowPosition="Bottom" ValidateRow="{DXEvent 'Update(@args.Row)'}">
+                <dxg:TableView.EditFormTemplate>
+                    <DataTemplate>
+                        <dxlc:LayoutControl Orientation="Vertical" ItemSpace="5">
+                            <dxlc:LayoutGroup View="GroupBox">
+                                <dxlc:LayoutItem Label="{Binding Name, Source={StaticResource ResourceProvider}}">
+                                    <dxg:EditFormEditor FieldName="Name" />
+                                </dxlc:LayoutItem>
+                                <dxlc:LayoutItem Label="{Binding GroupName, Source={StaticResource ResourceProvider}}">
+                                    <dxg:EditFormEditor FieldName="GroupName" />
+                                </dxlc:LayoutItem>
+                                <dxlc:LayoutItem Label="{Binding Shortcut, Source={StaticResource ResourceProvider}}">
+                                    <dxg:EditFormEditor FieldName="Shortcut" />
+                                </dxlc:LayoutItem>
+                            </dxlc:LayoutGroup>
+                            <dxlc:LayoutGroup View="GroupBox" >
+                                <dxlc:LayoutItem HorizontalAlignment="Left" Label="{Binding Command, Source={StaticResource ResourceProvider}}">
+                                    <dxg:EditFormEditor FieldName="Command" />
+                                </dxlc:LayoutItem>
+                                <dxlc:LayoutGroup HorizontalAlignment="Stretch" Orientation="Vertical" IsEnabled="{DXBinding 'Source.Row.Command==$common:CommandType.OpenWithApplication'}">                                    
+                                    <dxlc:LayoutItem Label="{Binding Application, Source={StaticResource ResourceProvider}}">
+                                        <dxg:EditFormEditor FieldName="Application" />
+                                    </dxlc:LayoutItem>
+                                    <dxlc:LayoutItem HorizontalAlignment="Left" Label="{Binding ConfirmBeforeRun, Source={StaticResource ResourceProvider}}">
+                                        <dxg:EditFormEditor FieldName="ConfirmBeforeRun" />
+                                    </dxlc:LayoutItem>
+                                </dxlc:LayoutGroup>                                
+                            </dxlc:LayoutGroup>
+                            <dxlc:LayoutGroup View="GroupBox" Orientation="Vertical">
+                                <dxlc:LayoutGroup>
+                                    <dxlc:LayoutItem HorizontalAlignment="Left" Label="{Binding Parameter, Source={StaticResource ResourceProvider}}">
+                                        <dxg:EditFormEditor FieldName="Parameter" />
+                                    </dxlc:LayoutItem>
+                                    <dxlc:LayoutItem HorizontalAlignment="Stretch" Label="{Binding Expression, Source={StaticResource ResourceProvider}}">
+                                        <controls:ExpressionSelectorControl EditValue="{Binding Source.Row.Expression}" IsEnabled="{DXBinding 'Source.Row.Parameter==$common:ParameterType.Expression'}" />
+                                    </dxlc:LayoutItem>
+                                </dxlc:LayoutGroup>
+                                <dxlc:LayoutGroup>
+                                    <dxlc:LayoutItem Label="{Binding Prefix, Source={StaticResource ResourceProvider}}">
+                                        <dxg:EditFormEditor FieldName="Prefix" />
+                                    </dxlc:LayoutItem>
+                                    <dxlc:LayoutItem Label="{Binding Suffix, Source={StaticResource ResourceProvider}}">
+                                        <dxg:EditFormEditor FieldName="Suffix" />
+                                    </dxlc:LayoutItem>
+                                </dxlc:LayoutGroup>
+                            </dxlc:LayoutGroup>
+                            <dxlc:LayoutGroup View="GroupBox" Orientation="Vertical">
+                                <dxlc:LayoutItem Label="{Binding ExtensionFilter, Source={StaticResource ResourceProvider}}">
+                                    <controls:ExtensionTokenEditControl EditValue="{Binding Source.Row.ExtensionFilter, Converter={common:StringToEnumerableObjectConverter}}" />
+                                </dxlc:LayoutItem>
+                                <dxlc:LayoutItem Label="{Binding SelectionFilter, Source={StaticResource ResourceProvider}}">
+                                    <dxe:ListBoxEdit EditValue="{Binding Source.Row.SelectionFilter}" Style="{StaticResource RadioListBoxStyle}">
+                                        <dxmvvm:Interaction.Behaviors>
+                                            <dxmvvm:EnumItemsSourceBehavior EnumType="{x:Type common:SelectionFilter}" />
+                                        </dxmvvm:Interaction.Behaviors>
+                                    </dxe:ListBoxEdit>
+                                </dxlc:LayoutItem>
+                                <dxlc:LayoutItem Label="{Binding ItemTypeFilter, Source={StaticResource ResourceProvider}}">
+                                    <dxe:ListBoxEdit EditValue="{Binding Source.Row.ItemTypeFilter}" Style="{StaticResource RadioListBoxStyle}">
+                                        <dxmvvm:Interaction.Behaviors>
+                                            <dxmvvm:EnumItemsSourceBehavior EnumType="{x:Type common:ItemTypeFilter}" />
+                                        </dxmvvm:Interaction.Behaviors>
+                                    </dxe:ListBoxEdit>
+                                </dxlc:LayoutItem>
+                            </dxlc:LayoutGroup>
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                                <Button Margin="0,10,10,0" Width="75" Height="25" Command="{Binding CommitCommand}"
+                                        Content="{Binding OK, Source={StaticResource ResourceProvider}}" />
+                                <Button Margin="0,10,0,0" Width="75" Height="25" Command="{Binding CancelCommand}"
+                                        Content="{Binding Cancel, Source={StaticResource ResourceProvider}}" />
+                            </StackPanel>
+                        </dxlc:LayoutControl>
+                    </DataTemplate>
+                </dxg:TableView.EditFormTemplate>
+            </dxg:TableView>
         </dxg:GridControl.View>
 
         <dxg:GridControl.Columns>
-            <dxg:GridColumn FieldName="Name" Header="{Binding Name, Source={StaticResource ResourceProvider}}" EditFormVisibleIndex="0" Width="100" />
-            <dxg:GridColumn FieldName="GroupName" Header="{Binding GroupName, Source={StaticResource ResourceProvider}}" EditFormVisibleIndex="1" Width="100" />
-            <dxg:GridColumn FieldName="Shortcut" Header="{Binding Shortcut, Source={StaticResource ResourceProvider}}" EditFormVisibleIndex="2" EditFormVisible="True" Visible="False">
+            <dxg:GridColumn FieldName="Name" Header="{Binding Name, Source={StaticResource ResourceProvider}}" Width="100" />
+            <dxg:GridColumn FieldName="GroupName" Header="{Binding GroupName, Source={StaticResource ResourceProvider}}" Width="100" />
+            <dxg:GridColumn FieldName="Shortcut" Header="{Binding Shortcut, Source={StaticResource ResourceProvider}}" Visible="False">
                 <dxg:GridColumn.EditFormTemplate>
                     <DataTemplate>
                         <editors:KeyGestureEdit x:Name="PART_Editor" />
                     </DataTemplate>
                 </dxg:GridColumn.EditFormTemplate>
             </dxg:GridColumn>
-            <dxg:GridColumn FieldName="Command" Header="{Binding Command, Source={StaticResource ResourceProvider}}" EditFormVisibleIndex="3"
+            <dxg:GridColumn FieldName="Command" Header="{Binding Command, Source={StaticResource ResourceProvider}}"
                             CellTemplate="{StaticResource CommandEditorTemplate}" EditFormTemplate="{StaticResource CommandEditorTemplate}" />
-            <dxg:GridColumn FieldName="Application" Header="{Binding Application, Source={StaticResource ResourceProvider}}" EditFormVisibleIndex="4" EditFormColumnSpan="2" EditFormVisible="True" Visible="False">
-                <dxg:GridColumn.EditFormTemplate>
-                    <DataTemplate>
-                        <editors:OpenFileDialogButton x:Name="PART_Editor" IsEnabled="{DXBinding 'RowData.Source.Row.Command==$common:CommandType.OpenWithApplication'}" 
-                                                      FileFilter="Programs (*.exe)|*.exe|All Files (*.*)|*.*" />
-                    </DataTemplate>
-                </dxg:GridColumn.EditFormTemplate>
-            </dxg:GridColumn>
-            <dxg:GridColumn FieldName="Parameter" Header="{Binding Parameter, Source={StaticResource ResourceProvider}}" EditFormVisibleIndex="5"
+            <dxg:GridColumn FieldName="Application" Header="{Binding Application, Source={StaticResource ResourceProvider}}">
+                <dxg:GridColumn.EditSettings>
+                    <dxe:BrowsePathEditSettings DialogType="FileOpen" DialogFilter="Programs (*.exe)|*.exe|All Files (*.*)|*.*" />
+                </dxg:GridColumn.EditSettings>
+            </dxg:GridColumn>            
+            <dxg:GridColumn FieldName="Parameter" Header="{Binding Parameter, Source={StaticResource ResourceProvider}}" Visible="False"
                             CellTemplate="{StaticResource ParameterEditorTemplate}" EditFormTemplate="{StaticResource ParameterEditorTemplate}" />
-            <dxg:GridColumn FieldName="Expression" Header="{Binding Expression, Source={StaticResource ResourceProvider}}" EditFormVisibleIndex="5" EditFormColumnSpan="2" EditFormVisible="True" Visible="False">
-                <dxg:GridColumn.EditFormTemplate>
-                    <DataTemplate>
-                        <controls:ExpressionSelectorControl x:Name="PART_Editor" IsEnabled="{DXBinding 'RowData.Source.Row.Parameter==$common:ParameterType.Expression'}" />
-                    </DataTemplate>
-                </dxg:GridColumn.EditFormTemplate>
-            </dxg:GridColumn>
-            <dxg:GridColumn EditFormVisibleIndex="6" EditFormColumnSpan="3" EditFormVisible="True" Visible="False"
-                            EditFormCaption="{Binding ExtensionFilter, Source={StaticResource ResourceProvider}}" 
-                            Binding="{Binding ExtensionFilter, Mode=TwoWay, Converter={common:StringToEnumerableObjectConverter}}">
-                <dxg:GridColumn.EditFormTemplate>
-                    <DataTemplate>
-                        <controls:ExtensionTokenEditControl x:Name="PART_Editor" />
-                    </DataTemplate>
-                </dxg:GridColumn.EditFormTemplate>
-            </dxg:GridColumn>
-            <dxg:GridColumn EditFormVisibleIndex="7" EditFormColumnSpan="3" EditFormVisible="True" Visible="False"
-                            EditFormCaption="{Binding SelectionFilter, Source={StaticResource ResourceProvider}}" Binding="{Binding SelectionFilter, Mode=TwoWay}">
-                <dxg:GridColumn.EditFormTemplate>
-                    <DataTemplate>
-                        <dxe:ListBoxEdit x:Name="PART_Editor" Style="{StaticResource RadioListBoxStyle}">
-                            <dxmvvm:Interaction.Behaviors>
-                                <dxmvvm:EnumItemsSourceBehavior EnumType="{x:Type common:SelectionFilter}" />
-                            </dxmvvm:Interaction.Behaviors>
-                        </dxe:ListBoxEdit>
-                    </DataTemplate>
-                </dxg:GridColumn.EditFormTemplate>
-            </dxg:GridColumn>
-            <dxg:GridColumn EditFormVisibleIndex="8" EditFormColumnSpan="3" EditFormVisible="True" Visible="False"
-                            EditFormCaption="{Binding ItemTypeFilter, Source={StaticResource ResourceProvider}}" Binding="{Binding ItemTypeFilter, Mode=TwoWay}">
-                <dxg:GridColumn.EditFormTemplate>
-                    <DataTemplate>
-                        <dxe:ListBoxEdit x:Name="PART_Editor" Style="{StaticResource RadioListBoxStyle}">
-                            <dxmvvm:Interaction.Behaviors>
-                                <dxmvvm:EnumItemsSourceBehavior EnumType="{x:Type common:ItemTypeFilter}" />
-                            </dxmvvm:Interaction.Behaviors>
-                        </dxe:ListBoxEdit>
-                    </DataTemplate>
-                </dxg:GridColumn.EditFormTemplate>
+            <dxg:GridColumn FieldName="Expression" Header="{Binding Expression, Source={StaticResource ResourceProvider}}" Visible="False" />
+            <dxg:GridColumn FieldName="Prefix" Header="{Binding Prefix, Source={StaticResource ResourceProvider}}" Visible="False" />
+            <dxg:GridColumn FieldName="Suffix" Header="{Binding Suffix, Source={StaticResource ResourceProvider}}" Visible="False" />
+            <dxg:GridColumn FieldName="ConfirmBeforeRun" Header="{Binding ConfirmBeforeRun, Source={StaticResource ResourceProvider}}" Visible="False">
+                <dxg:GridColumn.EditSettings>
+                    <dxe:ToggleSwitchEditSettings ContentPlacement="Far" CheckedStateContent="{Binding Yes, Source={StaticResource ResourceProvider}}"
+                                                  UncheckedStateContent="{Binding No, Source={StaticResource ResourceProvider}}" />
+                </dxg:GridColumn.EditSettings>
             </dxg:GridColumn>
             <dxg:GridColumn EditFormVisible="False" FixedWidth="True" Width="75">
                 <dxg:GridColumn.CellTemplate>
