--- a/FileExplorer/Controls/FileTreeViewControl.xaml
+++ b/FileExplorer/Controls/FileTreeViewControl.xaml
@@ -56,7 +56,7 @@
             </dxmvvm:Interaction.Behaviors>
             <dxb:PopupMenu.Items>
                 <dxb:BarSubItem Content="{Binding SortBy, Source={StaticResource ResourceProvider}}" ItemLinksSource="{Binding Columns, RelativeSource={RelativeSource AncestorType=dxg:TreeListControl}}"
-                                Glyph="pack://application:,,,/FileExplorer;component/Assets/Images/Sort16.png">
+                                common:IconGlyph.Source="Sort">
                     <dxb:BarSubItem.ItemTemplate>
                         <DataTemplate>
                             <ContentControl>
@@ -69,48 +69,48 @@
                 <dxb:BarButtonItem Content="{Binding ClearSorting, Source={StaticResource ResourceProvider}}" Command="{DXCommand '@a($dxg:TreeListControl).ClearSorting()'}"
                                    IsEnabled="{Binding SortInfo.Count, RelativeSource={RelativeSource AncestorType=dxg:TreeListControl}, Converter={dxmvvm:NumericToBooleanConverter}}" />
                 <dxb:BarItemSeparator />
-                <dxb:BarButtonItem Content="{Binding PinToQuickAccess, Source={StaticResource ResourceProvider}}" Glyph="/Assets/Images/Pin16.png"
+                <dxb:BarButtonItem Content="{Binding PinToQuickAccess, Source={StaticResource ResourceProvider}}" common:IconGlyph.Source="Pin"
                                    Command="{Binding PinToQuickAccessCommand}" CommandParameter="{Binding ClickedItem, RelativeSource={RelativeSource AncestorType=dxg:TreeListControl}}"
                                    IsVisible="{Binding IsEnabled, RelativeSource={RelativeSource Self}}" />
-                <dxb:BarButtonItem Content="{Binding UnpinFromQuickAccess, Source={StaticResource ResourceProvider}}" Glyph="/Assets/Images/Unpin16.png"
+                <dxb:BarButtonItem Content="{Binding UnpinFromQuickAccess, Source={StaticResource ResourceProvider}}" common:IconGlyph.Source="Unpin"
                                    Command="{Binding UnpinFromQuickAccessCommand}" CommandParameter="{Binding ClickedItem, RelativeSource={RelativeSource AncestorType=dxg:TreeListControl}}"
                                    IsVisible="{Binding IsEnabled, RelativeSource={RelativeSource Self}}" />
-                <dxb:BarButtonItem Content="{Binding Copy, Source={StaticResource ResourceProvider}}" Glyph="/Assets/Images/Copy16.png"
+                <dxb:BarButtonItem Content="{Binding Copy, Source={StaticResource ResourceProvider}}" common:IconGlyph.Source="Copy"
                                    Command="{Binding CopyToClipboardCommand}" CommandParameter="{Binding ClickedItems, RelativeSource={RelativeSource AncestorType=dxg:TreeListControl}}" />
-                <dxb:BarButtonItem Content="{Binding Paste, Source={StaticResource ResourceProvider}}" Glyph="/Assets/Images/Paste16.png"
+                <dxb:BarButtonItem Content="{Binding Paste, Source={StaticResource ResourceProvider}}" common:IconGlyph.Source="Paste"
                                    Command="{Binding PasteFromClipboardCommand}" CommandParameter="{Binding ClickedItem, RelativeSource={RelativeSource AncestorType=dxg:TreeListControl}}" />
-                <dxb:BarButtonItem Content="{Binding Cut, Source={StaticResource ResourceProvider}}" Glyph="/Assets/Images/Cut16.png"
+                <dxb:BarButtonItem Content="{Binding Cut, Source={StaticResource ResourceProvider}}" common:IconGlyph.Source="Cut"
                                    Command="{Binding CutToClipboardCommand}" CommandParameter="{Binding ClickedItems, RelativeSource={RelativeSource AncestorType=dxg:TreeListControl}}" />
-                <dxb:BarButtonItem Content="{Binding CopyPath, Source={StaticResource ResourceProvider}}" Glyph="/Assets/Images/CopyPath16.png"
+                <dxb:BarButtonItem Content="{Binding CopyPath, Source={StaticResource ResourceProvider}}" common:IconGlyph.Source="CopyPath"
                                    Command="{Binding CopyPathToClipboardCommand}" CommandParameter="{Binding ClickedItems, RelativeSource={RelativeSource AncestorType=dxg:TreeListControl}}" />
                 <dxb:BarItemSeparator />
-                <dxb:BarSplitButtonItem Content="{Binding Delete, Source={StaticResource ResourceProvider}}" Glyph="/Assets/Images/Delete16.png"
+                <dxb:BarSplitButtonItem Content="{Binding Delete, Source={StaticResource ResourceProvider}}" common:IconGlyph.Source="Delete"
                                         Command="{Binding RecycleItemsCommand}" CommandParameter="{Binding ClickedItems, RelativeSource={RelativeSource AncestorType=dxg:TreeListControl}}">
                     <dxb:PopupMenu>
-                        <dxb:BarButtonItem Content="{Binding Recycle, Source={StaticResource ResourceProvider}}" Glyph="/Assets/Images/Recycle16.png" IsEnabled="{DXBinding 'CurrentFolder.FullPath.StartsWith(`\\\\`) == false'}"
+                        <dxb:BarButtonItem Content="{Binding Recycle, Source={StaticResource ResourceProvider}}" common:IconGlyph.Source="Recycle" IsEnabled="{DXBinding 'CurrentFolder.FullPath.StartsWith(`\\\\`) == false'}"
                                            Command="{Binding RecycleItemsCommand}" CommandParameter="{Binding ClickedItems, RelativeSource={RelativeSource AncestorType=dxg:TreeListControl}}" />
-                        <dxb:BarButtonItem Content="{Binding PermanentlyDelete, Source={StaticResource ResourceProvider}}" Glyph="/Assets/Images/Delete16.png"
+                        <dxb:BarButtonItem Content="{Binding PermanentlyDelete, Source={StaticResource ResourceProvider}}" common:IconGlyph.Source="Delete"
                                            Command="{Binding DeleteItemsCommand}" CommandParameter="{Binding ClickedItems, RelativeSource={RelativeSource AncestorType=dxg:TreeListControl}}" />
                     </dxb:PopupMenu>
                 </dxb:BarSplitButtonItem>
-                <dxb:BarButtonItem Content="{Binding Rename, Source={StaticResource ResourceProvider}}" Glyph="/Assets/Images/Rename16.png" KeyGesture="F2"
+                <dxb:BarButtonItem Content="{Binding Rename, Source={StaticResource ResourceProvider}}" common:IconGlyph.Source="Rename" KeyGesture="F2"
                                    Command="{Binding RenameItemsCommand}" CommandParameter="{Binding ClickedItems, RelativeSource={RelativeSource AncestorType=dxg:TreeListControl}}" />
                 <dxb:BarItemSeparator />
-                <dxb:BarButtonItem Content="{Binding NewFolder, Source={StaticResource ResourceProvider}}" Glyph="/Assets/Images/NewFolder16.png" KeyGesture="Ctrl+Shift+N"
+                <dxb:BarButtonItem Content="{Binding NewFolder, Source={StaticResource ResourceProvider}}" common:IconGlyph.Source="NewFolder" KeyGesture="Ctrl+Shift+N"
                                    Command="{Binding CreateNewFolderCommand}" CommandParameter="{Binding ClickedItem, RelativeSource={RelativeSource AncestorType=dxg:TreeListControl}}" />
-                <dxb:BarButtonItem Content="{Binding NewFile, Source={StaticResource ResourceProvider}}" Glyph="/Assets/Images/NewTextDocument16.png"
+                <dxb:BarButtonItem Content="{Binding NewFile, Source={StaticResource ResourceProvider}}" common:IconGlyph.Source="NewFile"
                                    Command="{Binding CreateNewFileCommand}" CommandParameter="{Binding ClickedItem, RelativeSource={RelativeSource AncestorType=dxg:TreeListControl}}" />
-                <dxb:BarButtonItem Content="{Binding Zip, Source={StaticResource ResourceProvider}}" Glyph="/Assets/Images/Zip16.png"
+                <dxb:BarButtonItem Content="{Binding Zip, Source={StaticResource ResourceProvider}}" common:IconGlyph.Source="Zip"
                                    Command="{Binding ZipItemsCommand}" CommandParameter="{Binding ClickedItems, RelativeSource={RelativeSource AncestorType=dxg:TreeListControl}}" />
                 <dxb:BarItemSeparator />
                 <dxb:BarButtonItem Content="{Binding Open, Source={StaticResource ResourceProvider}}"
                                    Command="{Binding OpenItemCommand}" CommandParameter="{Binding ClickedItem, RelativeSource={RelativeSource AncestorType=dxg:TreeListControl}}"
                                    Glyph="{Binding ClickedItem.SmallIcon, RelativeSource={RelativeSource AncestorType=dxg:TreeListControl}}" />
-                <dxb:BarButtonItem Content="{Binding OpenInNewTab, Source={StaticResource ResourceProvider}}" Glyph="/Assets/Images/OpenFolder16.png" KeyGesture="Shift+Enter" 
+                <dxb:BarButtonItem Content="{Binding OpenInNewTab, Source={StaticResource ResourceProvider}}" common:IconGlyph.Source="OpenFolder" KeyGesture="Shift+Enter" 
                                    Command="{Binding OpenInNewTabCommand}" CommandParameter="{Binding ClickedItem, RelativeSource={RelativeSource AncestorType=dxg:TreeListControl}}" />
-                <dxb:BarButtonItem Content="{Binding OpenInNewWindow, Source={StaticResource ResourceProvider}}" Glyph="/Assets/Images/OpenNewWindow16.png" KeyGesture="Ctrl+Enter"
+                <dxb:BarButtonItem Content="{Binding OpenInNewWindow, Source={StaticResource ResourceProvider}}" common:IconGlyph.Source="OpenNewWindow" KeyGesture="Ctrl+Enter"
                                    Command="{Binding OpenInNewWindowCommand}" CommandParameter="{Binding ClickedItem, RelativeSource={RelativeSource AncestorType=dxg:TreeListControl}}" />
-                <dxb:BarButtonItem Content="{Binding Properties, Source={StaticResource ResourceProvider}}" Glyph="/Assets/Images/Properties16.png" KeyGesture="Alt+Enter"
+                <dxb:BarButtonItem Content="{Binding Properties, Source={StaticResource ResourceProvider}}" common:IconGlyph.Source="Properties" KeyGesture="Alt+Enter"
                                    Command="{Binding ShowPropertiesCommand}" CommandParameter="{Binding ClickedItems, RelativeSource={RelativeSource AncestorType=dxg:TreeListControl}}" />
             </dxb:PopupMenu.Items>
         </dxb:PopupMenu>
