--- a/FileExplorer/View/BrowserTabView.xaml
+++ b/FileExplorer/View/BrowserTabView.xaml
@@ -660,10 +660,8 @@
                     </dxlc:LayoutGroup>
                 </dxlc:LayoutGroup>
             </dxlc:LayoutGroup>
-            <controls:FileListViewControl x:Name="FileList" Margin="0,0,-1,-1" ItemsSource="{Binding DisplayItems}"
+            <controls:FileListViewControl x:Name="FileList" Margin="0,0,-1,-1" CurrentFolderPath="{Binding CurrentFolder.FullPath}" ItemsSource="{Binding DisplayItems}"
                                           FixedFilter="{Binding FilterCriteria, Mode=OneWay}" HighlightedText="{Binding HighlightedText}"
-                                          Loaded="{DXEvent '@ElementName(FileList).LoadFolderLayout(CurrentFolder.FullPath)'}"
-                                          ItemsSourceChanged="{DXEvent '@ElementName(FileList).LoadFolderLayout(CurrentFolder.FullPath)'}"
                                           RowDoubleClickCommand="{Binding OpenItemCommand}" EditSelectedItemsCommand="{Binding RenameItemsCommand}">
                 <controls:FileListViewControl.EditSelectedItemCommand>
                     <PriorityBinding>
